--- a/src/main/java/ni/edu/uni/programacion/views/StartFrame.form
+++ b/src/main/java/ni/edu/uni/programacion/views/StartFrame.form
@@ -68,7 +68,7 @@
         </Component>
         <Component class="javax.swing.JButton" name="jButton3">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Moneda"/>
+            <Property name="text" type="java.lang.String" value="jButton3"/>
           </Properties>
         </Component>
       </SubComponents>
