Added backend to branch

--- a/src/main/java/ni/edu/uni/programacion/views/panels/PnlConversionTemplate.form
+++ b/src/main/java/ni/edu/uni/programacion/views/panels/PnlConversionTemplate.form
@@ -32,7 +32,7 @@
         <Property name="alignment" type="int" value="2"/>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JButton" name="btnCalc">
+        <Component class="javax.swing.JButton" name="btnConv">
           <Properties>
             <Property name="text" type="java.lang.String" value="Convertir"/>
           </Properties>
