Added PnlVehicle started PnlVehicleController

--- a/src/main/java/ni/edu/uni/programacion/views/StartFrame.form
+++ b/src/main/java/ni/edu/uni/programacion/views/StartFrame.form
@@ -68,8 +68,14 @@
         </Component>
         <Component class="javax.swing.JButton" name="jButton3">
           <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/images/new-file.png"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="jButton3"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
